--- a/yarn-project/aztec/package.json
+++ b/yarn-project/aztec/package.json
@@ -55,16 +55,13 @@
     "@aztec/telemetry-client": "workspace:^",
     "@aztec/txe": "workspace:^",
     "@aztec/types": "workspace:^",
-    "@opentelemetry/winston-transport": "^0.7.0",
     "@types/chalk": "^2.2.0",
     "abitype": "^0.8.11",
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
     "koa": "^2.14.2",
     "koa-router": "^12.0.0",
-    "viem": "^2.7.15",
-    "winston": "^3.10.0",
-    "winston-daily-rotate-file": "^4.7.1"
+    "viem": "^2.7.15"
   },
   "files": [
     "dest",
