--- a/yarn-project/telemetry-client/package.json
+++ b/yarn-project/telemetry-client/package.json
@@ -33,6 +33,7 @@
     "@opentelemetry/exporter-metrics-otlp-http": "^0.52.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.54.0",
     "@opentelemetry/host-metrics": "^0.35.2",
+    "@opentelemetry/instrumentation-pino": "^0.44.0",
     "@opentelemetry/otlp-exporter-base": "^0.54.0",
     "@opentelemetry/resource-detector-aws": "^1.5.2",
     "@opentelemetry/resources": "^1.25.0",
@@ -40,9 +41,7 @@
     "@opentelemetry/sdk-metrics": "^1.25.0",
     "@opentelemetry/sdk-trace-node": "^1.25.0",
     "@opentelemetry/semantic-conventions": "^1.25.0",
-    "@opentelemetry/winston-transport": "^0.7.0",
-    "prom-client": "^15.1.3",
-    "winston": "^3.10.0"
+    "prom-client": "^15.1.3"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
