--- a/yarn-project/aztec/package.json
+++ b/yarn-project/aztec/package.json
@@ -22,7 +22,7 @@
     "formatting:fix": "run -T eslint --fix ./src && run -T prettier -w ./src",
     "build:dev": "tsc -b --watch",
     "test": "NODE_NO_WARNINGS=1 node --experimental-vm-modules ../node_modules/.bin/jest --passWithNoTests",
-    "run:example:token": "DEBUG='aztec:*' node ./dest/examples/token.js"
+    "run:example:token": "LOG_LEVEL='verbose' node ./dest/examples/token.js"
   },
   "inherits": [
     "../package.common.json"
